--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,14 +7,17 @@
 <loading hidden="{{hiddenLoading}}" bindchange="loadingChange">
     加载中...
 </loading>
-<view class="btn-area">
-  <navigator class="navList" url="navigate?title=navigate" hover-class="navigator-hover">问答</navigator>
-  <navigator class="navList" url="redirect?title=redirect" redirect hover-class="other-navigator-hover">分享</navigator>
-  <navigator class="navList" url="redirect?title=redirect" redirect hover-class="other-navigator-hover">工作</navigator>
-  <navigator url="redirect?title=redirect" redirect hover-class="other-navigator-hover">精华</navigator>
+<view class="btn-area nav">
+  <navigator class="navList" url="index?title=ask" hover-class="navigator-hover">问答</navigator>
+  <navigator class="navList" url="index?title=share" redirect hover-class="other-navigator-hover">分享</navigator>
+  <navigator class="navList" url="index?title=job" redirect hover-class="other-navigator-hover">工作</navigator>
+  <navigator class="navList" url="index?title=good" redirect hover-class="other-navigator-hover">精华</navigator>
 </view>
-<view class="articleList"  wx:for="{{articles}}" catchtap="showDetail" data-item="{{item}}">
-<image class="userPotraits" src="{{item.author.avatar_url}}"></image>
-<text class="title">{{item.title}}</text>
-<text class="createTime">{{item.create_at}}</text>
+<view class="articleList clr" id="id_{{$index}}"  wx:for="{{articles}}" catchtap="showDetail" data-item-id="{{item.id}}">
+<image class="userPotraits" src="{{item.author.avatar_url}}" data-item-id="{{item.id}}" ></image>
+<text class="title" data-item-id="{{item.id}}">{{item.title}}</text>
+<view class="timeWrap">
+  <text class="createTime" data-item-id="{{item.id}}">{{item.create_at}}</text>
+</view>
+
 </view>
