--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -14,7 +14,11 @@
   <navigator class="navList" url="index?title=good" redirect hover-class="other-navigator-hover">精华</navigator>
 </view>
 <view class="articleList clr" id="id_{{$index}}"  wx:for="{{articles}}" catchtap="showDetail" data-item-id="{{item.id}}">
-<image class="userPotraits" src="{{item.author.avatar_url}}" data-item-id="{{item.id}}" ></image>
+<view data-item-id="{{item.id}}">
+  <image class="userPotraits" src="{{item.author.avatar_url}}" data-item-id="{{item.id}}" ></image>
+  <text data-item-id="{{item.id}}">{{item.author.loginname}}</text>
+</view>>
+
 <text class="title" data-item-id="{{item.id}}">{{item.title}}</text>
 <view class="timeWrap">
   <text class="createTime" data-item-id="{{item.id}}">{{item.create_at}}</text>
